<resources>
    <string name="app_name">Finder</string>
    <string name="login">Login</string>
    <string name="finder">finder</string>
    <string name="con_ga">Con gà</string>
    <string name="terms_and_benefits">Bằng cách nhấp vào Đăng nhập, bạn đồng ý với Điều khoản của chúng tôi. Tìm hiểu về cách chúng tôi xử lý dữ liệu của bạn trong Chính sách Quyền riêng tư và sách về Cookie của chúng tôi</string>
    <string name="logo">logo</string>
    <string name="fb_login">Đăng nhập với Facebook</string>
    <string name="gmail_login">Đăng nhập với Gmail</string>
    <string name="user_login">Đăng nhập bằng tài khoản</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>