<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".page.login.LoginActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary"
        app:background="@color/primary"
        >
        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="42dp">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:contentDescription="@string/logo"
                android:paddingEnd="10dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_icon"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/fira_sans"
                android:gravity="center"
                android:text="@string/finder"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="34sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fira_sans"
                android:text="@string/terms_and_benefits"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                app:lineHeight="20dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="40dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="20dp">

            <Button
                android:id="@+id/login_fb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fira_sans"
                android:paddingVertical="15dp"
                android:text="@string/fb_login"
                android:textColor="#818181"
                android:textStyle="bold"
                app:backgroundTint="@color/white"
                app:cornerRadius="50dp" />

            <Button
                android:id="@+id/login_google"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fira_sans"
                android:paddingVertical="15dp"
                android:text="@string/gmail_login"
                android:textAllCaps="true"
                android:textColor="#818181"
                android:textStyle="bold"
                app:backgroundTint="@color/white"
                app:cornerRadius="50dp" />

            <Button

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fira_sans"
                android:paddingVertical="15dp"
                android:text="@string/user_login"
                android:textAllCaps="true"
                android:textColor="#818181"
                android:textStyle="bold"
                app:backgroundTint="@color/white"
                app:cornerRadius="50dp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
